--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,3 +57,27 @@ jobs:
         env:
           DATABASE_URL: postgresql://bingo_user:bingo_password@localhost:5432/bingo_db
         run: npm run build
+
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps chromium
+
+      - name: Start Next.js app
+        env:
+          DATABASE_URL: postgresql://bingo_user:bingo_password@localhost:5432/bingo_db
+        run: |
+          npm run start &
+          npx wait-on http://localhost:3000 --timeout 60000
+
+      - name: Run E2E tests
+        env:
+          DATABASE_URL: postgresql://bingo_user:bingo_password@localhost:5432/bingo_db
+          PLAYWRIGHT_BASE_URL: http://localhost:3000
+        run: npm run test:e2e
+
+      - name: Upload Playwright report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
