E2Eテストの実行時にSKIP_WEB_SERVER環境変数を追加

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,6 +72,7 @@ jobs:
         env:
           DATABASE_URL: postgresql://bingo_user:bingo_password@localhost:5432/bingo_db
           PLAYWRIGHT_BASE_URL: http://localhost:3000
+          SKIP_WEB_SERVER: '1'
         run: npm run test:e2e
 
       - name: Upload Playwright report
