データベースの初期データをシードするステップを追加

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,6 +44,8 @@ jobs:
         run: |
           npx prisma generate
           npx prisma migrate deploy
+          npx prisma db seed
+
 
       - name: Run linter
         run: npm run lint
